# oddSNP

./: CITATION.cff  NOTICE  README.md  pyproject.toml  readthedocs.yaml
.github/workflows/: docs.yml
conda-recipe/: meta.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  usage.rst
docs/source/_static/: custom.css
docs/source/api/: cpsnpic.rst  downsampling.rst  genotype.rst  index.rst  plotting.rst  snpic.rst  utils.rst
notebooks/: tutorial.ipynb
sample_data/: pvalues.tsv  regions.tsv
sample_data/filtered_pileup/: cellSNP.tag.AD.mtx  cellSNP.tag.DP.mtx  cellSNP.tag.OTH.mtx  snpic_bars.pkl  snpic_histogram.pkl
sample_data/full_pileup/: cellSNP.tag.AD.mtx  cellSNP.tag.OTH.mtx  cpsnpic_histogram.pkl  snpic_bars.pkl  snpic_histogram.pkl
src/oddSNP/: __init__.py  __main__.py  cpsnpic.py  downsampling.py  genotype.py  plotting.py  snpic.py  utils.py
